# fastapi-template

./: .gitignore  Dockerfile  README.Docker.md  README.md  docker-stack.yaml  gunicorn  main.py  pyproject.toml
.github/workflows/: pipeline.yaml
addons/test_addons_route/routes/: test_route.py
app/: main.py
app/addons/addons_route/routes/: route.py
app/addons/addons_route2/: __manifest__.py
app/addons/addons_route2/routes/: route.py
app/addons/template_module/: __manifest__.py
app/addons/template_module/routes/: route.py
app/addons/test_addons_route/: __manifest__.py
app/base/: api_init.py  db.py  module.py
app/base/routing/: auth.py
app/base/routing_utils/: routing.py
app/tests/: test_base.py
base/: api_init.py  logger.py  module.py  utils.py
base/models/: auth.py
